Adds early tests. Initial results view working. Pager working.

--- a/met-search.html
+++ b/met-search.html
@@ -21,7 +21,14 @@
             </div>
           </form>
         </div>
-        <div id="search-results">show results here</div>
+        <div id="search-results">
+          <div id="counter">show counter here here</div>
+          <div id="results-container">Show the results here</div>
+          <div id="pager-controls">
+            <button id="prev">Previous</button>
+            <button id="next">Next</button>
+          </div>
+        </div>
         <div id="favorites">
           build a slider of favorite/saved items; save this to browser data
           storage
