--- a/met-search.html
+++ b/met-search.html
@@ -4,6 +4,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MET Art finder 4000</title>
     <link rel="stylesheet" href="./met-search.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./img/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link rel="icon" type="image/svg+xml" href="./img/favicon.svg" />
+    <link rel="shortcut icon" href="./img/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./img/apple-touch-icon.png"
+    />
+    <meta name="apple-mobile-web-app-title" content="MET Art Finder 4000" />
+    <link rel="manifest" href="./img/site.webmanifest" />
   </head>
   <body class="app">
     <header class="header">
